# WarMAC

./: .editorconfig  .gitignore  .gitlint  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE.txt  README.md  README.rst  avg_price_market.py  cspell.json  pyproject.toml  requirements.txt  tool_attributions.md  vermin.ini  warmac.py  wfmarket_calc.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bandit.yml  codeql.yml  docs.yaml  lint.yaml  project.yaml  release.yaml  test.yaml  zizmor.yaml
LICENSES/: DEPENDENCIES_LICENSES.txt  LICENSE  LICENSE.txt
WarMAC/: main.py
docs/: LICENSE  Makefile  conf.py  index.rst  license.rst  make.bat  sphinx-requirements.txt
docs/_static/: custom.css
docs/_templates/: layout.html
docs/cli/: average.rst  index.rst
docs/internal/: cli_parser.rst  errors.rst  index.rst  schema.rst
docs/source/: average.rst  cli_parser.rst  conf.py  config.rst  contributing.rst  errors.rst  fetch_data.rst  index.rst  installation.rst  main.rst  schema.rst  troubleshooting.rst  using_warmac.rst  warmac_average.rst  warmac_errors.rst  warmac_main.rst  warmac_parser.rst
docs/source/cli/: average.rst  index.rst  warmac_usage.rst
docs/source/development/documentation/: errors.rst
docs/source/documentation/: average.rst  cli_parser.rst  config.rst  errors.rst  fetch_data.rst  index.rst  main.rst  schema.rst
docs/source/reference/: cli_parser.rst  warmac_average.rst  warmac_errors.rst  warmac_main.rst  warmac_parser.rst
docs/source/usage/: average.rst  index.rst  warmac.rst
programFiles/: main.py
scripts/: activate  activate.ps1
src/warmac/: __init__.py  __main__.py  _arguments.py  _classdefs.py  _parser.py  average.py  cli_parser.py  code_attributions.md  config.py  errors.py  fetch_data.py  main.py  schema.py
tests/: __init__.py  compatibility.sh  compatibility.txt  conftest.py  runtime_profile.sh  test_average.py  test_cli_parser.py  test_fetch_data.py  test_main.py
tests/unit/: __init__.py  test_main.py
warmac/: __init__.py  __main__.py  _arguments.py  _classdefs.py  _parser.py  average.py  classdefs.py  classdefs.pyi  cli_parser.py  cli_parser.pyi  errors.py  fetch_data.py  main.py  schema.py  warmac_average.py  warmac_errors.py  warmac_main.py  warmac_parser.py
warmac_files/: __init__.py  _arguments.py  main.py
