[project]
  name            = "WarMAC"
  version         = "0.0.5"
  description     = "An average platinum price calculator for tradeable items in Warframe."
  readme          = "README.md"
  requires-python = ">=3.10,<3.15"
  license         = "GPL-3.0-or-later"
  license-files   = ["LICENSE"]
  authors         = [{name = "Noah Jenner", email = "noah.jenner@proton.me"}]
  maintainers     = [{name = "Noah Jenner", email = "noah.jenner@proton.me"}]
  keywords        = [
    "platinum",
    "warframe",
    "warframe calculator",
    "warframe market"
  ]
  classifiers     = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
    "Typing :: Typed",
  ]
  dependencies    = [
    "msgspec>=0.19.0",
    "python-dateutil>=2.9; python_version < '3.11'",
    "urllib3>=2.0.4",
  ]

[project.urls]
  "Bug Tracker" = "https://github.com/Eutropios/WarMAC/issues"
  documentation = "https://warmac.readthedocs.io/en/"
  repository    = "https://github.com/Eutropios/WarMAC"

[project.scripts]
  warmac = "warmac.main:main"

[dependency-groups]
  dev          = ["vermin", "viztracer>=1.0.0"]
  docs         = [
    "docstrfmt>=1.10.0",
    "docutils>=0.18.1",
    "esbonio>=0.16",
    "furo>=2023.9",
    "sphinx<8.2,>=8.0; python_version >= '3.10' and python_version < '3.11'",
    "sphinx>=8.2; python_version >= '3.11'",
    "sphinx-copybutton>=0.5.2",
    "sphinx-inline-tabs>=2023.4.21",
    "sphinx-last-updated-by-git>=0.3.6",
    "sphinx-lint>=1",
    "sphinx-notfound-page>=1",
  ]
  test         = [
    "covdefaults>=2.3",
    "coverage<8.0,>=7.6",
    "pytest>=8.0",
    "pytest-mock>=3.14",
  ]
  typeChecking = [
    "msgspec",
    "mypy",
    "pytest",
    "pytest-mock",
    "python-dateutil>=2.9; python_version < '3.11'",
    "urllib3",
  ]

[build-system]
  requires      = ["uv_build>=0.7.19"]
  build-backend = "uv_build"

[tool.coverage.run]
  command_line = "-m pytest -vv ./tests"
  plugins      = ["covdefaults"]

[tool.coverage.report]
  exclude_also = [
    # Don't complain if non-runnable code isn't run:
    "if __name__ == .__main__.:",
  ]
  precision    = 2

[tool.docformatter]
  black               = true
  pre-summary-newline = true
  recursive           = true
  style               = "sphinx"
  wrap-descriptions   = 72
  wrap-summaries      = 72

[tool.mypy]
  exclude        = ["_build", "buck-out", "build", "dist", "htmlcov"]
  python_version = "3.14"
  strict         = true

[tool.pyright]
  include          = ["src", "tests"]
  pythonVersion    = "3.14"
  typeCheckingMode = "strict"

[tool.ruff]
  extend-exclude = [
    ".ipynb_checkpoints",
    ".pyenv",
    ".pytest_cache",
    ".vscode",
    "build",
    "htmlcov",
    "site-packages",
  ]
  indent-width   = 4
  line-length    = 88
  preview        = true
  show-fixes     = true
  target-version = "py310"

[tool.ruff.format]
  docstring-code-format     = true
  indent-style              = "space"
  line-ending               = "auto"
  quote-style               = "double"
  skip-magic-trailing-comma = false

[tool.ruff.lint]
  # NOTE: Some rules are turned off by Ruff due to `target-version` being set to Py 3.10
  explicit-preview-rules = false
  ignore                 = [
    "AIR",                          # Apache Airflow unused
    "COM812",                       # Must be turned off for formatter
    "DJ",                           # Django rules
    "DOC",                          # Off until DOC supports sphinx-style
    "ERA001",                       # Commented out code
    "FAST",                         # FastAPI rules
    "FIX",                          # FIXs unused
    "ISC001",                       # Must be turned off for formatter
    "ISC002",                       # Must be turned off for formatter
    "NPY",                          # Numpy rules
    "PD",                           # Pandas rules
    "T20",                          # Flags printing, which this program does
    "TD",                           # TODOs unused
  ]
  preview                = true
  select                 = ["ALL"]

[tool.ruff.lint.flake8-copyright]
  author = "Noah Jenner"

[tool.ruff.lint.flake8-implicit-str-concat]
  allow-multiline = true

[tool.ruff.lint.flake8-quotes]
  docstring-quotes = "double"
  inline-quotes    = "double"
  multiline-quotes = "double"

[tool.ruff.lint.flake8-type-checking]
  strict = true

[tool.ruff.lint.isort]
  required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.mccabe]
  max-complexity = 5

[tool.ruff.lint.per-file-ignores]
  "docs/source/conf.py"      = ["INP001"]
  "src/warmac/__init__.py"   = ["I002"]
  "src/warmac/__main__.py"   = ["I002"]
  "src/warmac/cli_parser.py" = ["SLF001"]
  "tests/**.py"              = ["D101", "S101"]
  "tests/**/__init__.py"     = ["I002"]
  # *IMPORTANT* - A dirty hack in cli_parser.py uses private components

[tool.ruff.lint.pycodestyle]
  max-doc-length = 72

[tool.ruff.lint.pydocstyle]
  # waiting for sphinx convention being added
  convention = "pep257"

[tool.tombi]
  toml-version = "v1.0.0"

[tool.tombi.format.rules]
  indent-table-key-value-pairs    = true
  inline-table-brace-space-width  = 0
  key-value-equals-sign-alignment = true
  trailing-comment-alignment      = true

[tool.ty.environment]
  python          = "./.venv"
  python-platform = "all"
  python-version  = "3.14"

[tool.ty.src]
  include = ["src", "tests"]
